--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Todo</title>
   <base href="/">
+  <meta name="google-site-verification" content="SCovuzb99e9mRaJRPCMhtoDYyHLnTNP-ImIxZsb0qp4" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
